# gitignore-ospath

./: .hlint.yaml  CHANGELOG.md  Makefile  README.md  gitignore-ospath.cabal
src/: Ignore.hs
src/Ignore/: Internal.hs
test/: IgnoreSpec.hs
