cabal-version:      3.0
name:               gitignore-ospath
version:            0.1.0
synopsis:           A compact OsPath-based Haskell .gitignore library.
homepage:           https://github.com/federicotdn/gitignore-ospath
license:            Apache-2.0
license-file:       LICENSE
author:             Federico Tedin
maintainer:         federicotedin@gmail.com
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

common shared-deps
    default-language: Haskell2010
    build-depends:    base ^>=4.18.3.0
                    , os-string ^>=2.0.8
                    , filepath ^>=1.5.4.0
                    , text ^>=2.1.3
    default-extensions: OverloadedStrings

library
    import:           warnings
                    , shared-deps
    exposed-modules:  Ignore
    hs-source-dirs:   src

test-suite gitignore-ospath-test
    import:           warnings
                    , shared-deps
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          IgnoreSpec.hs
    build-depends:    base ^>=4.18.3.0
                    , hspec ^>=2.11.16
                    , gitignore-ospath
