cabal-version:      3.0
name:               gitignore-ospath
version:            0.1.0
synopsis:           A compact Haskell library for reading `.gitignore` files and filtering paths.
description:        A compact Haskell library for reading `.gitignore` files and filtering paths.
                    .
                    The library works with `.gitignore`-like formats (e.g., `.dockerignore`) and uses
                    'System.OsPath.OsPath' for path handling. Parsing and filtering rules follow the
                    Git documentation.
homepage:           https://github.com/federicotdn/gitignore-ospath
bug-reports:        https://github.com/federicotdn/gitignore-ospath/issues
license:            Apache-2.0
license-file:       LICENSE
author:             Federico Tedin
maintainer:         federicotedin@gmail.com
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/federicotdn/gitignore-ospath

common warnings
    ghc-options: -Wall

common shared-deps
    default-language: Haskell2010
    build-depends:    base >=4.14.0.0 && <5
                    , os-string >=2.0.0 && < 3
                    , filepath >=1.5.0.0 && < 2
                    , text >=2.1.0 && < 3
    default-extensions: OverloadedStrings

library
    import:           warnings
                    , shared-deps
    exposed-modules:  Ignore
    other-modules:    Ignore.Internal
    hs-source-dirs:   src

test-suite gitignore-ospath-test
    import:           warnings
                    , shared-deps
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
                    , src
    main-is:          IgnoreSpec.hs
    other-modules:    Ignore
                    , Ignore.Internal
    build-depends:    base >=4.14.0.0 && <5
                    , hspec ^>=2.11.16
                    , gitignore-ospath
